--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lavenderdragondesign's-pdf-generator",
+  "name": "lavenderdragondesign-pdf-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +15,8 @@
     "d3": "^7.9.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "pdfjs-dist": "4.10.38"
+    "pdfjs-dist": "4.10.38",
+    "@google/genai": "^1.37.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
