--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
-  command = "npm install --no-audit --no-fund --progress=false && npm run build"
+  command = "npm run build"
   publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20"
 
-# SPA fallback for client-side routing (safe even if you don't use routing)
+# SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
