--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lavenderdragondesign-pdf-generator",
+  "name": "lavenderdragondesign's-pdf-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
