--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,8 @@
+# Netlify config for a Vite/React SPA
 [build]
   command = "npm run build"
   publish = "dist"
 
-[build.environment]
-  NODE_VERSION = "20"
-
-# SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
