--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "d3": "^7.9.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "pdfjs-dist": "4.10.38",
-    "@google/genai": "^1.37.0"
+    "pdfjs-dist": "4.10.38"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
